Decreased header height to avoid overflowing into video

--- a/web/components/ui/Sidebar/Sidebar.module.scss
+++ b/web/components/ui/Sidebar/Sidebar.module.scss
@@ -6,7 +6,7 @@
     position: fixed;
     right: 0;
     bottom: 0;
-    top: 69px;
+    top: 56px;
     z-index:100;
   }
 
