--- a/web/styles/globals.scss
+++ b/web/styles/globals.scss
@@ -9,7 +9,7 @@
 :root {
   --content-padding: 0.95rem;
   --module-spacing: 12px; // margin size between lines of stuff, if needed
-  --header-height: 4.3rem; // needed for making main content scrollable;
+  --header-height: 3.5rem; // needed for making main content scrollable;
   --footer-height: 2.5rem; // needed for making main content scrollable;
   --content-height: calc(100vh - var(--header-height));
   --replacement-bar-height: 46px; // needed for making main content scrollable on mobile;
